1.2.0 to 1.2.1
----------------------------------------------------------------------
- Addressed issue with DHCP poller not closing connections. Bug 1101
  Thx Bill.
- Added XMPP Notifications (Jabber) to OpenNMS. Bug 1168. Thanks Chris
- Added the ability to gather and display SNMP text properties in 
  reports. Bug 1115. Thx Craig.
- Changed snmpIfAlias column size to 256. Bug 1127
- Modified MockPollConfig to share code with PollOutageConfigFactory. Bug 1122
- Write test for and fixed midnight outages in PollOutageConfigManager, Bug 1122
- Fix GETBULK in SnmpIfCollector to handle cases where indices are not
  contiguous.  Fixed ArrayIndexOutOfBound exceptions. Bug 1141
- Add RESOLVED: to body of email and pager msgs.  Unit tests include. Bug 1134.
  Thnx mhuot and bill ayres.
- Fix the /usr/bin/opennms (or /usr/local/bin/opennms) script created by
  opennms.spec.in so that it passes arguments to opennms.sh.  Bug 1136.
  Thanks to Chris Abernethy <opennms@obado.net> for reporting this bug.

1.1.5 to 1.2.0
----------------------------------------------------------------------
- Added new SystemDef for Cisco PIX. Thx Ted. Bug 1047.
- Removed deleted nodes from the list of nodes available for
  choosing SNMP data collection. Thx Bill. Bug 1043
- Added a dependency for a lib required by Java on FC3. Bug 1068
- Added some corrections to the release notes. Thx Scott. Bug 965

1.1.4 to 1.1.5
----------------------------------------------------------------------
- Added support for ifAlias. Thx Mike and Bill. Bug 598.
- Added Patrol Events
- Relabeled hpux.cpu report from Swap to CPU. Thx Jason
- Changed the label to "UnAck" when looking at acknowledged events.
  Bug 927
- Added a quick link to KSC reports from the main page.
- Added a test to avoid a nullPointerException during data collection.
  Thx David. Bug 841
- Corrected an issue with notification/event matching. Bug 740.
- Added a check for improperly formatted v2 traps.