@@ -1,0 +1,25 @@
+<events>
+<event>
+ <mask>
+  <maskelement>
+   <mename>id</mename>
+   <mevalue>.1.3.6.1.4.1.3955.2.2.1</mevalue>
+  </maskelement>
+  <maskelement>
+   <mename>generic</mename>
+   <mevalue>6</mevalue>
+  </maskelement>
+  <maskelement>
+   <mename>specific</mename>
+   <mevalue>1</mevalue>
+  </maskelement>
+ </mask>
+ <uei>uei.opennms.org/vendor/Linksys/traps/linksysConnTrap</uei>
+ <event-label>Linksys Connection Trap</event-label>
+ <descr>&lt;p&gt;This trap signifies that a TCP/UDP connection has been made.
+&lt;/p&gt;
+ </descr>
+ <logmsg dest='donotpersist'>&lt;p&gt;Linksys Event: %parm[#1]%.&lt;/p&gt;</logmsg>
+ <severity>Normal</severity>
+</event>
+</events>
