@@ -47,7 +47,7 @@
   <link rel="stylesheet" type="text/css" href="includes/styles.css" />
 </head>
 
-<body marginwidth="0" marginheight="0" LEFTMARGIN="0" RIGHTMARGIN="0" TOPMARGIN="0">
+<body marginwidth="0" marginheight="0" LEFTMARGIN="0" RIGHTMARGIN="0" TOPMARGIN="0" onLoad="document.newIpForm.ipAddress.focus()">
 
 <% String breadcrumb1 = "<a href='admin/index.jsp'>Admin</a>"; %>
 <% String breadcrumb2 = "Add Interface"; %>
